Dodane knjige u biblioteku koje su falile
Od kako je stranica nastala, od danas dodano je dosta novih knjiga, pa
sam ih dodao i na ovu stranicu - uporedjujuci sadasnji i novi sajt:

БОГОСЛОВЉЕ СВЕТООТАЧКОГ ПОДВИГА И ИСКУСТВА
<li class="listbmp2"><a
href="Bogoslovlje/VanCrkveNemaSpasenjaMaksimov/VanCrkveNemaSpasenjaMaksimov.htm">ВАН
ЦРКВЕ НЕМА СПАСЕЊА</a> - Ђакон ГЕОРГИЈЕ Максимов</li>

ВЕЛИКИ ПОСТ
<li class="listbmp2"><a href="VelikiPost/OLjuboOPostu.htm">ХРИШЋАНСКИ
ПОСТ ГУБИ СВОЈ СМИСАО ВАН БОГОСЛУЖЕЊА</a> - Протојереј-ставрофор ЉУБО
Милошевић</li>

ДУХОВНО УЗДИЗАЊЕ
<li class="listbmp2"><a
href="DuhovnoUzdizanje/StaracPajsijePouke/StaracPajsijePouke.htm">ПОУКЕ</a>
- Старац ПАЈСИЈЕ Светогорац</li>
<li class="listbmp2"><a
href="DuhovnoUzdizanje/SvIsakSirin_PodvigUNasemZivotu/SvIsakSirinPodvigUNasemZivotu.htm">ПОДВИГ
У НАШЕМ ЖИВОТУ</a> - Свети ИСАК Сирин</li>
<li class="listbmp2"><a
href="DuhovnoUzdizanje/DuhovnoZlato/DuhovnoZlato.htm">ДУХОВНО ЗЛАТО
КОЈИМ СЕ НЕБО КУПУЈЕ</a> - Епископ Мелентије – Хилендарац</li>
<li class="listbmp2"><a
href="DuhovnoUzdizanje/DuseHristove/DuseHristove.htm">ДУШЕ ХРИСТОВЕ</a>
- Старац ЈАКОВ Цаликис, Преподобни ДАВИД Еубејски Чудотворац</li>
<li class="listbmp2"><a
href="DuhovnoUzdizanje/DuhovneBesedeMakarijeVeliki/DuhovneBesedeMakarijeVeliki.htm">ДУХОВНЕ
БЕСЕДЕ</a> - Свети МАКАРИЈЕ Велики</li>

КЊИГЕ И ИЗАБРАНИ ЧЛАНЦИ
<li class="listbmp2"><a
href="Knjige/Crkva%20sv%20Stefana/HramSvStefana0.htm">ХРАМ СВЕТОГ
АРХИЂАКОНА СТЕФАНА-УМЕТНОСТ И АРХИТЕКТУРА</a> - Протојереј - ставрофор
СРБОЉУБ М Милетић</li>

ЖИТИЈА СВЕТИХ
<li class="listbmp2"><a
href="Zitija/PatrijarhPavleBudimoLjudi/PatrijarhPavle_BudimoLjudi.htm">БУДИМО
ЉУДИ - ЖИВОТ И РЕЧ ПАТРИЈАРХА ПАВЛА</a> - ЈОВАН Јањић</li>
<li class="listbmp2"><a
href="Zitija/SvMatronaMoskovska/SvMatronaMoskovska.htm">СВЕТА МАТРОНА
МОСКОВСКА</a></li>
<li class="listbmp2"><a
href="Zitija/BlazenaKsenijaPetrogradska/BlazenaKsenijaPetrogradska.htm">БЛАЖЕНА
КСЕНИЈА ПЕТРОГРАДСКА</a></li>

ИСТОРИЈА ЦРКВЕ
<li class

--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
@@ -98,6 +98,7 @@
         </table>
         <p><strong></strong></p>
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/bibliotekaBogoslovlje/VanCrkveNemaSpasenjaMaksimov/VanCrkveNemaSpasenjaMaksimov.htm">ВАН ЦРКВЕ НЕМА СПАСЕЊА</a> - Ђакон ГЕОРГИЈЕ Максимов</li>
             <li class="listbmp2"><a href="/biblioteka/Bogoslovlje/SvIpolit-SvetoPismoAntihrist.htm">ИЗЛОЖЕЊЕ О ХРИСТУ И АНТИХРИСТУ  НА ОСНОВУ СВЕТОГ ПИСМА</a> - Свети ИПОЛИТ Римски</li>
             <li class="listbmp2"><a href="/biblioteka/Bogoslovlje/JefremSirinRaj.htm">О РАЈУ</a> - Свети ЈЕФРЕМ Сиријски</li>
             <li class="listbmp2"><a href="/biblioteka/Bogoslovlje/SvetostFilaretMoskovski.htm">СВЕТОСТ ЈЕ ОБАВЕЗА СВАКОГ ХРИШЋАНИНА</a> - Свети ФИЛАРЕТ Московски</li>
@@ -308,6 +309,7 @@
         <p>&nbsp;</p>
         <p><strong>ВЕЛИКИ ПОСТ<a name="post"></a></strong></p>
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/biblioteka/VelikiPost/OLjuboOPostu.htm">ХРИШЋАНСКИ ПОСТ ГУБИ СВОЈ СМИСАО ВАН БОГОСЛУЖЕЊА</a> - Протојереј-ставрофор ЉУБО Милошевић</li>
             <li class="listbmp2"><a href="/biblioteka/Bogosluzbeni/BogosluzenjeStrasnaSedmica/BogosluzenjeStrasnaSedmica.htm">ТУМАЧЕЊЕ БОГОСЛУЖЕЊА СТРАСНЕ СЕДМИЦЕ И ПАСХЕ Коментари и напомене професора В. Н. Иљина</a></li>
             <li class="listbmp2"><a href="/biblioteka/VelikiPost/StrasnaSedmicaSvetiOci/StrasnaSedmicaSvetiOci.htm">СВЕТООТАЧКЕ ПОУКЕ НА ДАНЕ СТРАСНЕ СЕДМИЦЕ  <em>Зборник црквено-поучних читања у дане Страсне Седмице</em></a></li>
             <li class="listbmp2"><a href="/biblioteka/VelikiPost/SmisaoVelikogPosta.htm">СМИСАО ВЕЛИКОГ ПОСТА</a> - Мати МАРИЈА и епископ КАЛИСТ (Вар)</li>
@@ -322,6 +324,11 @@
         <p>&nbsp;</p>
         <p><strong>ДУХОВНО УЗДИЗАЊЕ<a name="duhovnouzdizanje"></a></strong></p>
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/StaracPajsijePouke/StaracPajsijePouke.htm">ПОУКЕ</a> - Старац ПАЈСИЈЕ Светогорац</li>
+            <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/SvIsakSirin_PodvigUNasemZivotu/SvIsakSirinPodvigUNasemZivotu.htm">ПОДВИГ У НАШЕМ ЖИВОТУ</a> - Свети ИСАК Сирин</li>
+            <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/DuhovnoZlato/DuhovnoZlato.htm">ДУХОВНО ЗЛАТО КОЈИМ СЕ НЕБО КУПУЈЕ</a> - Епископ Мелентије – Хилендарац</li>
+            <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/DuseHristove/DuseHristove.htm">ДУШЕ ХРИСТОВЕ</a> - Старац ЈАКОВ Цаликис, Преподобни ДАВИД Еубејски Чудотворац</li>
+            <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/DuhovneBesedeMakarijeVeliki/DuhovneBesedeMakarijeVeliki.htm">ДУХОВНЕ БЕСЕДЕ</a> - Свети МАКАРИЈЕ Велики</li>
             <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/MojZivotUHristu/MojZivotUHristu.htm">МОЈ ЖИВОТ У ХРИСТУ (I ТОМ)</a> - Свети ЈОВАН Кронштатски</li>
             <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/OcinskePoukeStaracJefremFilotejski/OcinskePoukeStaracJefremFilotejski.htm">ОЧИНСКЕ ПОУКЕ</a> - Старац ЈЕФРЕМ Филотејски и Аризонски</li>
             <li class="listbmp2"><a href="/biblioteka/DuhovnoUzdizanje/PutUZivotPatrijarhPavle/PutUZivotPatrijarhPavle.htm">ПУТ У ЖИВОТ</a> - Блаежнопочивши ПАВЛЕ Српски</li>
@@ -410,6 +417,7 @@
         </table>
         <p><strong></strong></p>
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/biblioteka/Knjige/Crkva%20sv%20Stefana/HramSvStefana0.htm">ХРАМ СВЕТОГ АРХИЂАКОНА СТЕФАНА-УМЕТНОСТ И АРХИТЕКТУРА</a> - Протојереј - ставрофор СРБОЉУБ М Милетић</li>
             <li class="listbmp2"><a href="/biblioteka/Knjige/IskustvoMitropolitAtanasije.htm">НАЈВЕЋЕ ИСКУСТВО КОЈЕ ЧОВЕК МОЖЕ ДА СТЕКНЕ</a> - Митрополит АТАНАСИЈЕ Лимасолски</li>
             <li class="listbmp2"><a href="/biblioteka/Knjige/KosovoiVidovdan/KosovoiVidovdan.htm">КОСОВО И ВИДОВДАН</a> - Св. епископ НИКОЛАЈ Жички  (Велимировић)</li>
             <li class="listbmp2"><a href="/biblioteka/Knjige/MladostIStrasti/MladostIStrasti.htm">МЛАДОСТ И СТРАСТИ</a> - ВЛАДИМИР Димитријевић</li>
@@ -502,6 +510,9 @@
         </table>
 
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/biblioteka/Zitija/PatrijarhPavleBudimoLjudi/PatrijarhPavle_BudimoLjudi.htm">БУДИМО ЉУДИ - ЖИВОТ И РЕЧ ПАТРИЈАРХА ПАВЛА</a> - ЈОВАН Јањић</li>
+            <li class="listbmp2"><a href="/biblioteka/Zitija/SvMatronaMoskovska/SvMatronaMoskovska.htm">СВЕТА МАТРОНА МОСКОВСКА</a></li>
+            <li class="listbmp2"><a href="/biblioteka/Zitija/BlazenaKsenijaPetrogradska/BlazenaKsenijaPetrogradska.htm">БЛАЖЕНА КСЕНИЈА ПЕТРОГРАДСКА</a></li>
             <li class="listbmp2"><a href="/biblioteka/Zitija/StaracPajsijeSvetogoracZitije/StaracPajsijeSvetogoracZitije.htm">ЖИТИЈЕ СТАРЦА ПАЈСИЈА СВЕТОГОРЦА</a> - Јеромонах ИСААК</li>
             <li class="listbmp2"><a href="/biblioteka/Zitija/StradanjeSPC/StradanjeSPC.htm">УТАМНИЧЕНА ЦРКВА Страдање свештенства Српске Православне Цркве  од 1945. до 1985. године</a> - Протојереј САВО Б. Јовић</li>
             <li class="listbmp2"><a href="/biblioteka/Zitija/OdKosovaDoJadovna/OdKosovaDoJadovna.htm">ОД КОСОВА ДО ЈАДОВНА (ПУТНИ ЗАПИСИ)</a> - Јеромонах (Епископ) АТАНАСИЈЕ Јевтић</li>
@@ -530,6 +541,8 @@
         <p>&nbsp;</p>
         <p><strong>ИСТОРИЈА ЦРКВЕ<a name="istorija"></a></strong></p>
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/biblioteka/Istorija/MisinaAmerickiRaskol.htm">АМЕРИЧКИ РАСКОЛ</a> - Проф. др ВЕЉКО Ђурић Мишина</li>
+            <li class="listbmp2"><a href="/biblioteka/Istorija/MakedonskaPravoslavnaCrkva/MakedonskaPravoslavnaCrkva.htm">МАКЕДОНСКА ПРАВОСЛАВНА ЦРКВА</a> - Проф. др ВЕЉКО Ђурић Мишина</li>
             <li class="listbmp2"><a href="/biblioteka/Istorija/PismoKrlezi.htm">ПИСМО АУСТРИЈСКОМ ФЕЛДВЕБЕЛУ МИРОСЛАВУ КРЛЕЖИ</a> - АНТОНИЈЕ Тодоровић</li>
             <li class="listbmp2"><a href="/biblioteka/Istorija/VaseljenskiSabori/VaseljenskiSabori.htm">СЕДАМ ВАСЕЉЕНСКИХ САБОРА  (ПРЕМА ЧЕТИ-МИНЕЈИМА СВ. ДИМИТРИЈА РОСТОВСКОГ)</a> </li>
             <li class="listbmp2"><a href="/biblioteka/Istorija/MilanskiEdikt.htm">МИЛАНСКИ ЕДИКТ 313. ГОДИНЕ</a> - Протојереј - ставрофор др. РАДОМИР Поповић</li>
@@ -584,6 +597,8 @@
         <p>&nbsp;</p>
         <p><strong>ПРАВОСЛАВНА КЊИЖЕВНОСТ<a name="knjizevnost"></a></strong></p>
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/biblioteka/Knjizevnost/VDimitrijevicCesmaVodeZive/CesmaVodeZivePrvaKnjiga.htm">ЧЕСМА ВОДЕ ЖИВЕ</a> - ВЛАДИМИР Димитријевић</li>
+            <li class="listbmp2"><a href="/biblioteka/Knjizevnost/VDimitrijevicPisciHriscanskeEvrope/VDimitrijevicPisciHriscanskeEvrope.htm">ПИСЦИ ХРИШЋАНСКЕ ЕВРОПЕ</a> - ВЛАДИМИР Димитријевић</li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Vrlinoslov/vrlinoslov.htm">ДЕЧИЈИ ВРЛИНОСЛОВ</a> - 13 врлина до Божијих висина</li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/CrtezUPesku/CrtezUPesku.htm">ЦРТЕЖ У ПЕСКУ  Повест о ранохришћанским мученицима</a> </li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Izvori/Izvori.htm">ИЗВОРИ <i>Роман о Немањи и Светом Сави</i></a> - МИЛАН Милетић</li>
@@ -591,9 +606,8 @@
             <li class="listbmp2"><a href="/biblioteka/Lira/naslovna.htm">ДУХОВНА ЛИРА</a> - Св. НИКОЛАЈ Жички</li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Bozic.htm">БОЖИЋ</a> <em>(из &quot;Охридског Пролога&quot;)</em> - Св. НИКОЛАЈ Жички</li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Liturgija.htm">НЕБЕСНА ЛИТУРГИЈА</a> - Св. НИКОЛАЈ Жички</li>
-            <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Srbijo.htm">ОЈ СРБИЈО</a>
-            - Св. НИКОЛАЈ Жички
-          <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Poezija/Poezija.htm">ПРЕМА НЕБЕСКИМ ЛЕПОТАМА</a> <em>(Стара српска поезија)</em></li>
+            <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Srbijo.htm">ОЈ СРБИЈО</a> - Св. НИКОЛАЈ Жички</li>
+            <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Poezija/Poezija.htm">ПРЕМА НЕБЕСКИМ ЛЕПОТАМА</a> <em>(Стара српска поезија)</em></li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/mpetrovic.htm">ПЕСМЕ</a> - Милан М. Петровић</li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/santic.htm">ПЕСМЕ</a> - Алекса Шантић</li>
             <li class="listbmp2"><a href="/biblioteka/Knjizevnost/Mleci.htm">ВЛАХ У МЛЕЦИМА</a></li>
@@ -673,6 +687,19 @@
         <p>&nbsp;</p>
         <p><strong>САВРЕМЕНИ ИЗАЗОВИ И ИСКУШЕЊА<a name="izazovi"></a></strong></p>
         <ul class="ulbmp">
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/StavMPOPrvenstvuVaseljenskePatrijarsije.htm">СТАВ МОСКОВСКЕ ПАТРИЈАРШИЈЕ О ПРВЕНСТВУ У ВАСЕЉЕНСКОЈ ЦРКВИ</a></li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/NePopravnimIzborima.htm">НИКАКО НИКАКО НА ШИПТАРСКЕ ИЗБОРЕ</a> - Протојереј-ставрофор ЉУБО Милошевић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/NikakoNakosovskeIzbore.htm">НИКАКО НИКАКО НА ШИПТАРСКЕ ИЗБОРЕ</a> - Протојереј-ставрофор ЉУБО Милошевић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/MitropolitAmfilohijePismoPovodomParade.htm">ПИСМО ОРГАНИЗАТОРИМА ПАРАДЕ БЕСТИДНОСТИ У ПОДГОРИЦИ</a> - Митрополит АМФИЛОХИЈЕ Радовић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/OLjubaParada.htm">ПОВОДОМ ПАРАДЕ "ПОНОСА" ЗАКАЗАНЕ ЗА 28. СЕПТЕМБАР 2013. ГОДИНЕ У БЕОГРАДУ</a> - Протојереј-ставрофор ЉУБО Милошевић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/PolemikaSaBorbomZaVeru/PolemikaSaBorbomZaVeru.htm">ПОЛЕМИКА О ПОСТУ ИЗМЕЂУ УРЕДНИШТВА САЈТА &quot;БОРБА ЗА ВЕРУ&quot; И О. ЉУБА МИЛОШЕВИЋА</a></li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/MatiAnastasija_BratBrataNeSmeDaIzda.htm">БРАТ БРАТА НЕ СМЕ ДА ИЗДА</a> - Мати АНАСТАСИЈА Девичка</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/SasluzivanjeEpGrigorijaOdgovor.htm">НЕУСПЕЛО ОПРАВДАВАЊЕ ХВАЛИСАВОГ НЕПОСЛУШАЊА ПРАВОСЛАВНОЈ ЦРКВИ ЕПИСКОПА ХЕРЦЕГОВАЧКОГ ГРИГОРИЈА</a> - Протојереј-ставрофор Љубо Милошевић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/SasluzivanjeEpGrigorija.htm">БЕСМИСЛЕНОСТ ОПРАВДАВАЊА ХВАЛИСАВОГ НЕПОСЛУШАЊА ПРАВОСЛАВНОЈ ЦРКВИ ЕПИСКОПА ХЕРЦЕГОВАЧКОГ ГРИГОРИЈА</a> - Протојереј-ставрофор Љубо Милошевић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/TeodorZisis.htm">ЗАБРАЊЕНЕ СУ ЗАЈЕДНИЧКЕ МОЛИТВЕ СА ПАПИСТИМА САГЛАСНО МИШЉЕЊУ СВЕТОГ ЈУСТИНА ПОПОВИЋА (први део)</a> - Теодор Зисис</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/ShvatanjeSvetostimZizijulas.htm">СХВАТАЊЕ СВЕТОСТИ МИТРОПОЛИТА ЈОВАНА ЗИЗИЈУЛАСА У СВЕТЛУ ПРЕДАЊА ПРАВОСЛАВНЕ ЦРКВЕ</a> - Родољуб  Лазић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/PredsednikNikolicPokrenuoStaroPitanjeRaskola.htm">РАСКОЛ У СЛОБОДИ ИЛИ ПОРОБЉЕНОСТИ?</a> - Протојереј-ставрофор Љубо Милошевић</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/Trifkovic_ZajedniceKojeNestaju.htm">ХРИШЋАНИ НА БЛИСКОМ ИСТОКУ ИЛИ ЗАЈЕДНИЦЕ КОЈЕ НЕСТАЈУ</a> - Срђа Трифковић</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/SkarovskiKonstantinopoljskaPatrijarsija.htm">КОНСТАНТИНОПОЉСКА ПАТРИЈАРШИЈА И ЊЕНИ ОДНОСИ СА РУСКОМ И БУГАРСКОМ ПРАВОСЛАВНОМ ЦРКВОМ У ПЕРИОДУ ОД 1917. ДО 1950.</a> - Професор МИХАИЛ Шкаровски</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/SinodJefremMaksimov.htm">ШТА ЈЕ ПОСТИГАО СИНОД КОНСТАНТИНОПОЉСКЕ ЦРКВЕ?</a> - Ђакон ГЕОРГИЈЕ Максимов</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/Karelin_LekZaModernizam.htm">ЛЕК ПРОТИВ МОДЕРНИЗМА</a> - Архимандрит РАФАИЛ Карелин</li>
