--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewBag.Title = "Библиотека";
 }
-
+<script type="text/javascript">
+    $('#biblioteka').addClass('active');
+</script>
 <div class="row">
     <!-- Leva kolona -->
     <div class="span8">
