--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Crkvenoslovenski.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Crkvenoslovenski.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Црквенословенски језик";
 }
+<script type="text/javascript">
+    $('#crkvenoslovenski').addClass('active'); 
+</script>
 
     <div class="row">
         <!-- Leva kolona -->
