--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Index.cshtml
@@ -12,6 +12,9 @@
     string Dan = sr.DateTimeFormat.DayNames[dan];
     string Mjes = sr.DateTimeFormat.MonthNames[(int)today.Month - 1];
 }
+<script type="text/javascript">
+    $('#home').addClass('active'); 
+</script>
 
 @section HeaderSection {
    <!-- logo i slika oca Justina -->
