--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Molitve.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Molitve.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Молитве";
 }
+<script type="text/javascript">
+    $('#molitve').addClass('active'); 
+</script>
 
     <div class="row">
         <!-- Leva kolona -->
