--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Pojanje.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Pojanje.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Појање";
 }
+<script type="text/javascript">
+    $('#pojanje').addClass('active'); 
+</script>
 
     <div class="row">
         <!-- Leva kolona -->
