--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Svetinje.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Svetinje.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Светиње";
 }
+<script type="text/javascript">
+    $('#svetinje').addClass('active'); 
+</script>
 
     <div class="row">
         <!-- Leva kolona -->
