--- a/Svetosavlje/Web/Svetosavlje/Views/Pastir/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pastir/Index.cshtml
@@ -5,6 +5,10 @@
 @{
     ViewBag.Title = "Питање пастиру";
 }
+<script type="text/javascript">
+    $('#pastir').addClass('active'); 
+</script>
+
 <!-- Glavni sadrzaj -->
 <div class="row-fluid">
     <div class="span12">
