--- a/Svetosavlje/Web/Svetosavlje/Views/Lista/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Lista/Index.cshtml
@@ -7,6 +7,10 @@
 @{
     ViewBag.Title = "Архива Листе";
 }
+<script type="text/javascript">
+    $('#lista').addClass('active');
+</script>
+
 <style>
     .underline {border-bottom:solid 1px black; }
 </style>
