--- a/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
@@ -5,6 +5,9 @@
 @{
     ViewBag.Title = "Пролог";
 }
+<script type="text/javascript">
+    $('#prolog').addClass('active');
+</script>
 
 <link rel="stylesheet" type="text/css" href="~/Scripts/julian/jquery.calendars.picker.css">
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
