--- a/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Home/Biblioteka.cshtml
@@ -759,7 +759,7 @@
             <li class="listbmp2"><a href="/biblioteka/Izazovi/epJefrem_Saboru.htm">СВЕТОМ АРХИЈЕРЕЈСКОМ САБОРУ СПЦ</a> -  Епископ бањалучки ЈЕФРЕМ</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/Bogosluzenje_epGeorgije.htm">ТРАДИЦИОНАЛНО И САВРЕМЕНО БОГОСЛУЖЕЊЕ</a>  -  Епископ канадски ГЕОРГИЈЕ</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/Smeman/grckinacionalizam.htm">ГРЧКИ РЕЛИГИОЗНИ НАЦИОНАЛИЗАМ</a> -  Прот. АЛЕКСАНДАР Шмеман</li>
-            <li class="listbmp2"><a href="/biblioteka/Izazovi/Jurisdikcija/Jurisdikcija.htm">ЦРКВЕНА ђакон ГЕОРГИЈЕ (ЈУРИЈ)СДИКЦИЈА НАД ПРАВОСЛАВНОМ ДИАСПОРОМ</a> -  СЕРГИЈЕ Троицки</li>
+            <li class="listbmp2"><a href="/biblioteka/Izazovi/Jurisdikcija/Jurisdikcija.htm">ЦРКВЕНА ЈУРИСДИКЦИЈА НАД ПРАВОСЛАВНОМ ДИАСПОРОМ</a> -  СЕРГИЈЕ Троицки</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/BorbaZaVeruDanas.htm">О БОРБИ ЗА ВЕРУ ДАНАС</a> -  Епископ ДАНИЛО (Крстић)</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/Duhovnoporedjenje.htm">ДУХОВНО ПОРЕЂЕЊЕ </a>-  Поређење духовности Фрање Асишког и светог Серафима Саровског  - О. Георгије Макрис</li>
             <li class="listbmp2"><a href="/biblioteka/Izazovi/Moskva_Konstantinopolj.htm">ПРАВОСЛАВНА ДИЈАСПОРА</a> - Писмо Патријарха Московског и целе Русије Алексеја II Патријарху Константинопољском Вартоломеју</li>
